--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "TypeScriptSelenium",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,6 +9,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "npm": "^6.13.4"
-  }
+    "@types/chai": "^4.2.7",
+    "@types/mocha": "^5.2.7",
+    "@types/selenium-webdriver": "^4.0.6",
+    "chai": "^4.2.0",
+    "mocha": "^6.2.2",
+    "npm": "^6.13.4",
+    "selenium-webdriver": "^4.0.0-alpha.5",
+    "ts-node": "^8.5.4",
+    "typescript": "^3.7.4"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sensorlsd/typescriptSelenium.git"
+  },
+  "bugs": {
+    "url": "https://github.com/sensorlsd/typescriptSelenium/issues"
+  },
+  "homepage": "https://github.com/sensorlsd/typescriptSelenium#readme",
+  "description": ""
 }
